--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url("image/weather.png");
+    background-image: url("weather.png");
     background-size: cover;
   
     font-family: "Poppins", sans-serif;
